# holo-web-conductor

./: .gitignore  AGENT_TEAMS.md  APP_DEVELOPER_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_PLAN.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  DEPLOYING.md  DEVELOPMENT.md  HOLOCHAIN_FOR_THE_WEB.md  LESSONS_LEARNED.md  README.md  SESSION.md  STEP11_COMPLETION.md  STEP11_PLAN.md  STEP2.5_COMPLETION.md  STEP2_COMPLETION.md  STEP5.5.5_PLAN.md  STEP5.5_PLAN.md  STEP5.6_PLAN.md  STEP5.7_PLAN.md  STEP5_COMPLETION.md  STEP5_PLAN.md  STEP6.7_COMPLETION.md  STEP6.7_PLAN.md  STEP7.2_COMPLETION.md  STEP7.2_PLAN.md  STEP7.3_COMPLETION.md  STEP7.3_PLAN.md  STEP7_PLAN.md  STEP7_RESEARCH.md  STEP9.5_COMPLETION.md  STEP9.5_PLAN.md  TESTING.md  WIP-STEP1.md  claude.md  flake.nix  node_modules  package-lock.json  (+3 more)
STEPS/: 10.1_COMPLETION.md  10.1_PLAN.md  10.2_COMPLETION.md  10.2_PLAN.md  12.1_ENCODING_PLAN.md  12.2_GET_DETAILS_CASCADE.md  12.2_PLAN.md  12.3_PLAN.md  12_ENCODING_PLAN.md  13_COMPLETION.md  13_PLAN.md  14_COMPLETION.md  14_PLAN.md  15_COMPLETION.md  16_PLAN.md  18_PLAN.md  19.1_ISSUE_GET_JOINING_TIMESTAMP.md  19.2_HC_MEMBRANE_KITSUNE_DHT_OPS.md  19.3_KITSUNE_QUERY_RESPONSE_TIMEOUT.md  19.4_PUBLISHED_DATA_NOT_QUERYABLE.md  19.5_SYNC_XHR_TIMEOUT_REDUCTION.md  19.6_GET_AGENT_ACTIVITY_HOST_FN.md  1_COMPLETION.md  2.5_PLAN.md  20_COMPLETION.md  20_PLAN.md  21_PLAN.md  22_PLAN.md  23_PLAN.md  25_COMPLETION.md  25_PLAN.md  26_COMPLETION.md  26_PLAN.md  29_PLAN.md  3_PLAN.md  (+34 more)
investigations/serialization-test-rust/: Cargo.toml
investigations/serialization-test-rust/src/: main.rs
(+29 files in other folders)
