[package]
name = "serialization-test-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
holochain_serialized_bytes = "=0.0.56"
holochain_integrity_types = "0.6.0-rc.0"
holo_hash = { version = "0.6.0-rc.0", features = ["serialization", "hashing"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1.3"
hex = "0.4"
